dead/test/invalid/redefinition.c
int main() {
    int ab;
    {
        int abc;
    }
    int abc;
    int ab;
    return 0;
}
